Fix breaking overflow in body
Useful for mobile devices

--- a/css3-github-ribbon.styl
+++ b/css3-github-ribbon.styl
@@ -7,15 +7,17 @@ $position = 'top-right'
 
 // ribbon
 .github-ribbon
-  background-color $background-color
-  ribbon-position $position
-  box-shadow 0 0 0px 1px lighten(desaturate($background-color, 20%), 5%) inset, 0 0 2px 1px white inset, 0 0 1em #888
-  color $color
-  display block
-  padding 0.6em 3.5em
-  position fixed
-  font bold 0.82em sans-serif
-  text-align center
-  text-decoration none
-  text-shadow: 1px -1px 8px rgba(0,0,0,0.6)
-  user-select none
+	background-color $background-color
+	ribbon-position $position
+	box-shadow 0 0 0px 1px lighten(desaturate($background-color, 20%), 5%) inset, 0 0 2px 1px white inset, 0 0 1em #888
+	color $color
+	display block
+	padding 0.6em 3.5em
+	position fixed
+	font bold 0.82em sans-serif
+	text-align center
+	text-decoration none
+	text-shadow: 1px -1px 8px rgba(0,0,0,0.6)
+	user-select none
+body
+	overflow-x none
